2009-05-06  Andi Kleen  <ak@linux.intel.com>

	* utils/ophelp.c: Use word wrap to output event descriptions

2009-05-01  Andi Kleen  <ak@linux.intel.com>

	* events/i386/arch_perfmon/events: Update event names to conform to manual.

2009-05-01  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in:
	* m4/binutils.m4: Workaround to make oprofile build on recent SUSE

2009-04-29  Andi Kleen  <ak@linux.intel.com>

	* libop/op_events.c: Add support for include and unit mask merging
	  statements in event files

2009-04-29  Andi Kleen  <ak@linux.intel.com>

	* libop/op_events.c: Allow make check to accumulate some errors
	  before exiting

2009-04-28  Maynard Johnson  <maynardj@us.ibm.com>

	* events/Makefile.am:
	* events/ppc64/power7/event_mappings: (new)
	* events/ppc64/power7/events: (new)
	* events/ppc64/power7/unit_masks: (new)
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c:  Add support for IBM POWER7 processor

2009-04-22  Maynard Johnson  <maynardj@us.ibm.com>

	* agents/jvmpi/jvmpi_oprofile.cpp: Change this file to use LGPL license
	  to allow JVMPI agent library to link to non-GPL code

2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* utils/opcontrol: Add IBS support, patch 4 of 4

2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* pp/opannotate.cpp: Add IBS support, patch 3 of 4

2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Add IBS support, patch 2 of 4


2009-04-17  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* daemon/Makefile.am:
	* daemon/opd_extended.c:
	* daemon/opd_ibs.c: New File
	* daemon/opd_ibs.h: New File
	* daemon/opd_ibs_macro.h: New File
	* daemon/opd_ibs_trans.c: New File
	* daemon/opd_ibs_trans.h: New File
	* daemon/opd_interface.h:
	* daemon/opd_sfile.c:
	* daemon/opd_sfile.h:
	* daemon/opd_trans.c:
	* libdb/db_insert.c: