@@ -1,0 +1,9 @@
+#
+# Copyright OProfile authors
+# Copyright (c) International Business Machines, 2009.
+# Contributed by Maynard Johnson <maynardj@us.ibm.com>.
+#
+# ppc64 compat mode version 1 possible unit masks
+#
+name:zero type:mandatory default:0x0
+	0x0 No unit mask
