@@ -826,6 +826,7 @@ char const * find_mapping_for_event(u32 nr, op_cpu cpu_type)
 		case CPU_PPC64_POWER5pp:
 		case CPU_PPC64_POWER6:
 		case CPU_PPC64_POWER7:
+		case CPU_PPC64_IBM_COMPAT_V1:
 			if (!fp) {
 				fprintf(stderr, "oprofile: could not open event mapping file %s\n", filename);
 				exit(EXIT_FAILURE);
@@ -993,6 +994,7 @@ void op_default_event(op_cpu cpu_type, struct op_default_event_descr * descr)
 		case CPU_PPC64_POWER5pp:
 		case CPU_PPC64_CELL:
 		case CPU_PPC64_POWER7:
+		case CPU_PPC64_IBM_COMPAT_V1:
 			descr->name = "CYCLES";
 			break;
 
